# nrf_tests

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md
.claude/: ralph-loop.local.md
docs/: pse84_context_reload.md  pse84_m33_rram_investigation.md  pse84_m33_secure_uart_fault.md  pse84_octal_policy_enablement.md  pse84_psram_handoff.md
host/: .gitignore
host/assistant_bridge/: README.md  __init__.py  ble_transport.py  bridge.py  conftest.py  framing.py  mac_mic.py  pipeline.py  requirements.txt
host/assistant_bridge/tests/: test_framing.py  test_mac_mic.py  test_pipeline.py  test_uart_transport.py
host/audio_capture/: __init__.py  receive_pcm.py  uart_protocol.py
host/audio_capture/tests/: test_receive_pcm.py  test_uart_protocol.py
zephyr_workspace/: APPLICATIONS_GUIDE.md  BLE_OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  POWER_TEST_REPORT.md  PSE84_OCTAL_FLASH_ENABLEMENT_PLAN.md  PSE84_OCTAL_RESEARCH_FINDINGS.md  PSE84_PROJECT_STATUS.md  README.md  SUMMARY.md  ble_throughput_test.py  l2cap_throughput_native.swift  l2cap_throughput_test.py  power_analysis.py  power_throughput_1v8_no_usb.json  power_throughput_3v_no_usb.json  power_throughput_batch.py  power_throughput_raw.json  power_throughput_test.py  pse84_assistant_phase4_scouting.md  serial_and_test.py  serial_monitor.py
zephyr_workspace/L2CAPTest/L2CAPTest.xcodeproj/: project.pbxproj
zephyr_workspace/L2CAPTest/Sources/: BLEManager.swift  ContentView.swift  Info.plist  L2CAPTestApp.swift
zephyr_workspace/alif_b1_adv_test/: CMakeLists.txt  README.md  prj.conf
zephyr_workspace/alif_b1_adv_test/src/: main.c
zephyr_workspace/alif_b1_idle_test/: CMakeLists.txt  README.md  prj.conf
zephyr_workspace/alif_b1_idle_test/src/: main.c
zephyr_workspace/alif_b1_l2cap_test/: CMakeLists.txt  README.md  debug.conf  prj.conf
zephyr_workspace/alif_b1_l2cap_test/src/: main.c
zephyr_workspace/alif_b1_throughput_test/: CMakeLists.txt  README.md  prj.conf
zephyr_workspace/nrf54l15_ble_test/: CMakeLists.txt  README.md  nrf54l15dk_nrf54l15_cpuapp.overlay  prj.conf  prj_ncs.conf
zephyr_workspace/nrf54l15_dual_core_test/: CMakeLists.txt  README.md  nrf54l15dk_nrf54l15_cpuapp.overlay  prj.conf  sysbuild.cmake
zephyr_workspace/nrf54l15_gatt_central_fast/: CMakeLists.txt  prj.conf
zephyr_workspace/nrf54l15_gatt_peripheral_fast/: CMakeLists.txt  prj.conf
zephyr_workspace/nrf54l15_l2cap_central/: CMakeLists.txt  prj.conf
zephyr_workspace/nrf54l15_l2cap_central_fast/: prj.conf
zephyr_workspace/nrf54l15_l2cap_test/: MACOS_OPTIMIZATION.md  PLAN.md  PROMPT.md  README.md  prj.conf
zephyr_workspace/nrf54l15_l2cap_test_fast/: CMakeLists.txt  PLAN.md  THROUGHPUT_LOG.md  context.md  nrf54l15dk_nrf54l15_cpuapp.overlay  prj.conf
zephyr_workspace/nrf54lm20_adv_test/: CMakeLists.txt  README.md  prj.conf
zephyr_workspace/nrf54lm20_idle_test/: CMakeLists.txt  README.md  debug.conf  prj.conf
zephyr_workspace/nrf54lm20_l2cap_test/: CMakeLists.txt  README.md  prj.conf
zephyr_workspace/nrf54lm20_throughput_test/: CMakeLists.txt  README.md  prj.conf
zephyr_workspace/power_comparison/: README.md  ble_central.py  flash_helper.py  platforms.py  power_compare_analysis.py  power_compare_test.py  ppk2_helper.py  run_all.py  run_qemu_test.sh
zephyr_workspace/pse84_assistant/: CMakeLists.txt  Kconfig  M33_HARDFAULT_RCA.md  README.md  prj.conf  prj_audio_debug.conf  prj_native_sim.conf  prj_native_sim_snapshot.conf  prj_qemu_m55.conf
zephyr_workspace/pse84_assistant/assets/: TIER_LOG.md
zephyr_workspace/pse84_assistant/assets/idle/: frames.c  frames.h
zephyr_workspace/pse84_assistant/assets/listening/: frames.c  frames.h
zephyr_workspace/pse84_assistant/assets/responding/: frames.c  frames.h
zephyr_workspace/pse84_assistant/assets/thinking/: frames.c  frames.h
zephyr_workspace/pse84_assistant/boards/: kit_pse84_eval_pse846gps2dbzc4a_m55.overlay  mps3_corstone300_an547.overlay  native_sim_native_64.overlay  native_sim_snapshot.overlay
zephyr_workspace/pse84_assistant/docs/: ANIMATIONS.md  ipc_design.md
zephyr_workspace/pse84_assistant/src/: app_heap.c  audio.c  audio.h  ble.c  ble.h  framing.c  framing.h  gatt_svc.c  gatt_svc.h  l2cap.c  l2cap.h  link.c  link.h  log_tunnel.c  log_tunnel.h  main.c  opus_wrapper.c  opus_wrapper.h  snapshot.c  snapshot.h  sprite_types.h  sprites.c  sprites.h  state.c  state.h  ui.c  ui.h
zephyr_workspace/pse84_assistant/sysbuild/: enable_cm55.conf  enable_cm55.overlay
zephyr_workspace/pse84_assistant/tests/framing/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr_workspace/pse84_assistant/tests/framing/src/: test_framing.c
zephyr_workspace/pse84_assistant/tests/mbox_pse84/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr_workspace/pse84_assistant/tests/mbox_pse84/boards/: native_sim.overlay  native_sim_native_64.overlay
zephyr_workspace/pse84_assistant/tests/mbox_pse84/fake_cy_ipc/: cy_ipc_drv.c  cy_ipc_drv.h
zephyr_workspace/pse84_assistant/tests/mbox_pse84/src/: test_mbox_pse84.c
zephyr_workspace/pse84_assistant/tests/opus_roundtrip/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr_workspace/pse84_assistant/tests/opus_roundtrip/boards/: mps3_corstone300_an547.conf
zephyr_workspace/pse84_assistant/tests/opus_roundtrip/src/: test_opus_roundtrip.c
zephyr_workspace/pse84_assistant/tools/: capture_snapshots.sh  flash_m33_rram.sh  video_to_sprites.py
zephyr_workspace/pse84_assistant_m33/: prj.conf
zephyr_workspace/pse84_assistant_m33ns/: CMakeLists.txt  prj.conf
zephyr_workspace/pse84_assistant_m33ns/boards/: kit_pse84_eval_pse846gps2dbzc4a_m33.overlay  kit_pse84_eval_pse846gps2dbzc4a_m33_ns.overlay
zephyr_workspace/pse84_assistant_m33ns/src/: main.c
zephyr_workspace/pse84_cartoon_test/: CMakeLists.txt  prj.conf
zephyr_workspace/pse84_i2c_test/: CMakeLists.txt  REPORT.md
zephyr_workspace/pse84_octal_enablement/: README.md
zephyr_workspace/pse84_psram_test/: CMakeLists.txt  prj.conf
zephyr_workspace/pse84_video_test/: CMakeLists.txt  README.md
zephyr_workspace/pse84_video_test/boards/: kit_pse84_eval_pse846gps2dbzc4a_m55.overlay
(+46 files in other folders)
